project nearly finished read the note and see whats left!
