# routes/v2/product_images.js
@@ -2,7 +2,6 @@ const router = require('express').Router();
 const TableService = require('../../services/TableService');
 const TableServiceInstance = new TableService();
 const { isAdmin } = require('../../helpers/authHelper');
-const createError = require('http-errors');
 
 module.exports = (app) => {
     app.use("/v2/product-images", router);
@@ -17,15 +16,28 @@ module.exports = (app) => {
         }
     });
 
+    router.param("product_id", async (req, res, next) => {
+        try {
+
+            const product = await TableServiceInstance.findOneRow(req.params.product_id, "products", "id");
+            const productImages = await TableServiceInstance.findAllBasedOnFkey(product.id, "product_images", "product_id");
+            req.product = product;
+            req.productImages = productImages;
+            next();
+
+        } catch (error) {
+            next(error);
+        }
+    });
+
     // curl -X GET "http://localhost:4001/v2/product-images/single/3"
 
 
     router.get("/:product_id", async (req, res, next) => {
         try {
-            const productImages = await TableServiceInstance.rowsBasedOnFK("product_images", "products", req.product.id, req.cols, "product_id");
             const response = {
                 Product: req.product,
-                Product_images: productImages
+                Product_images: req.productImages
             }
             res.status(200).send(response);
         } catch (error) {
@@ -35,17 +47,9 @@ module.exports = (app) => {
 
     router.post("/:product_id", isAdmin, async (req, res, next) => {
         try {
-            const { image_name, image_data } = req.body;
-
-            const data = {
-                product_id: req.product.id,
-                image_name,
-                image_data,
-            }
-            // https://www.easyjet.com/ejcms/cache/medialibrary/Images/JSS/Destinations/Hero/France_Nice_3840x2160.jpg
-            const contact = await TableServiceInstance.newRow(data, "product_images");
-
-            res.status(201).send(contact);
+            const newBody = req.body.map(v => ({ ...v, product_id: req.product.id }));
+            const productImages = await Promise.all(newBody.map(async (data) => await TableServiceInstance.newRow(data, "product_images")));
+            res.status(201).send(productImages);
         } catch (error) {
             next(error);
         }
@@ -64,11 +68,7 @@ module.exports = (app) => {
     // router.get("/:product_id", async (req, res, next) => {
     router.get("/single/:id", async (req, res, next) => {
         try {
-            if (req.productImage === undefined) {
-                throw createError(404, 'Not logged in')
-            } else {
-                res.status(200).send(req.productImage);
-            }
+            res.status(200).send(req.productImage);
         } catch(err) {
             next(err);
         }
@@ -76,28 +76,20 @@ module.exports = (app) => {
 
     router.put('/single/:id', isAdmin, async (req, res, next) => {
         try {
-            if (req.productImage === undefined) {
-                throw createError(404, 'Not logged in')
-            } else {
                 const productImage = req.productImage;
-                if (productImage.id !== req.productImage.id) {
-                    throw createError(401, 'Refresh the page should work ;)')
-                } else {
-                    for (const key in req.body) {
-                        if (req.body[key] === '' || req.body[key] === null || req.body[key] === undefined) {
-                            delete req.body[key]
-                        } else {
-                            if (typeof req.body[key] === "string" && key !== "image_data") {
-                                req.body[key] = req.body[key]?.toLowerCase();
-                            }
+                for (const key in req.body) {
+                    if (req.body[key] === '' || req.body[key] === null || req.body[key] === undefined) {
+                        delete req.body[key]
+                    } else {
+                        if (typeof req.body[key] === "string" && key !== "image_data") {
+                            req.body[key] = req.body[key]?.toLowerCase();
                         }
                     }
-                    req.body.modified = 'NOW()';
-
-                    const productImageUpdate = await TableServiceInstance.updateRow(productImage.id, req.body, 'product_images', 'id');
-                    res.status(201).send(productImageUpdate);
                 }
-            }
+                req.body.modified = 'NOW()';
+
+                const productImageUpdate = await TableServiceInstance.updateRow(productImage.id, req.body, 'product_images', 'id');
+                res.status(201).send(productImageUpdate);
         } catch(err) {
             next(err);
         }
